--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
+black==23.10.0
+click==8.1.7
 Django==2.1.1
+mypy-extensions==1.0.0
+packaging==23.2
+pathspec==0.11.2
+platformdirs==3.11.0
 pytz==2023.3.post1
+tomli==2.0.1
+typing_extensions==4.8.0
