--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 black==23.10.0
 click==8.1.7
 dj-database-url==0.5.0
-Django==2.1.1
+//Django==2.1.1
+Django==3.9.2
 gunicorn==21.2.0
 mypy-extensions==1.0.0
 packaging==23.2
