--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ defusedxml==0.7.1
 dj-database-url==0.5.0
 Django==3.2.22
 django-allauth==0.43.0
+djangorestframework==3.14.0
 gunicorn==21.2.0
 idna==3.4
 mypy-extensions==1.0.0
